--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,13 @@
 <html>
     <head>
-        <title>Waqq.ly</title>
+        <title>Waqqly</title>
     </head>
     <body>
         <h1>
-            For Dogs
+            Waqqly
         </h1>
         <p>
-            And owners
+            For dog owners and dog walkers
         </p>
     </body>
 </html>
