--- a/views/index.html
+++ b/views/index.html
@@ -1,13 +1,18 @@
-<html>
-    <head>
-        <title>Waqqly</title>
-    </head>
-    <body>
-        <h1>
-            Waqqly
-        </h1>
-        <p>
-            For dog owners and dog walkers
-        </p>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Static Web App</title>
+    <link rel="stylesheet" href="styles/main.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Website</h1>
+    </header>
+    <main>
+        <p>This is a sample website.</p>
+    </main>
+    <script src="scripts/main.js"></script>
+</body>
 </html>
