--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
         <p>This is a sample website.</p>
+        <button>Click Me</button>
     </main>
     <script src="scripts/main.js"></script>
 </body>
