--- a/views/styles/main.css
+++ b/views/styles/main.css
@@ -15,3 +15,15 @@ header {
 main {
     padding: 2em;
 }
+
+button {
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 0.5em 1em;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0056b3;
+}
