--- a/views/index.html
+++ b/views/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Static Web App</title>
+    <title>Waqqly</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website</h1>
+        <h1>Waqqly Dog Walking</h1>
     </header>
     <main>
-        <p>This is a sample website.</p>
+        <p>Just for dogs and only dogs</p>
         <button>Click Me</button>
     </main>
     <script src="scripts/main.js"></script>
