--- a/views/index.html
+++ b/views/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <header id="main-header">
-        <h1>Welcome to Waqq.ly</h1>
-        <p>Find the best dog walkers in your area!</p>
+        <div class="container">
+            <h1>Welcome to Waqq.ly</h1>
+            <p>Find the best dog walkers in your area</p>
+        </div>
     </header>
 
     <div class="container">
@@ -43,14 +45,14 @@
             </form>
         </section>
 
-        <section id="results">
+        <section id="pet-results">
             <h2>Registered Pets</h2>
             <ul id="pets-list">
                 <!-- Pets will be displayed here -->
             </ul>
         </section>
 
-        <section id="results">
+        <section id="walker-results">
             <h2>Registered Dog Walkers</h2>
             <ul id="walkers-list">
                 <!-- Dog walkers will be displayed here -->
