--- a/views/index.html
+++ b/views/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
     <header id="main-header">
-        <div class="container">
-            <h1>Welcome to Waqq.ly</h1>
-            <p>Find the best dog walkers in your area</p>
-        </div>
+        <h1>Welcome to Waqq.ly</h1>
+        <p>Find the best dog walkers in your area!</p>
     </header>
 
     <div class="container">
@@ -55,11 +53,11 @@
         <section id="walker-results">
             <h2>Registered Dog Walkers</h2>
             <ul id="walkers-list">
-                <!-- Dog walkers will be displayed here -->
+                <!-- Walkers will be displayed here -->
             </ul>
         </section>
     </div>
 
-    <script src="main.js"></script>
+    <script src="scripts/main.js"></script>
 </body>
 </html>
