--- a/views/styles/main.css
+++ b/views/styles/main.css
@@ -1,78 +1,51 @@
-/* Reset default browser styles */
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-
-/* Box sizing border-box for easier layout */
-* {
-    box-sizing: border-box;
-}
-
-/* Default font and background */
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
+    margin: 0;
+    padding: 0;
 }
 
-/* Container for layout */
 .container {
     width: 80%;
     margin: auto;
-    padding: 20px;
+    overflow: hidden;
 }
 
-/* Header styles */
 #main-header {
     background-color: #333;
     color: #fff;
-    padding: 20px;
-    text-align: center;
+    padding-top: 30px;
+    min-height: 70px;
     border-bottom: #0779e4 3px solid;
 }
 
-#main-header h1 {
-    font-size: 24px;
-    text-transform: uppercase;
-    margin-bottom: 10px;
+#main-header .container {
+    text-align: center;
 }
 
-/* Form styles */
+#main-header h1 {
+    margin: 0;
+    font-size: 24px;
+    text-transform: uppercase;
+}
+
 form {
     background: #fff;
     padding: 20px;
-    margin-bottom: 20px;
+    margin: 20px 0;
     box-shadow: 0 0 10px 0 #ccc;
 }
 
 form div {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
 form div label {
     display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
 }
 
 form div input[type="text"] {
-    width: calc(100% - 22px); /* Adjust for padding */
+    width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -81,36 +54,33 @@ form div input[type="text"] {
 form div button[type="submit"] {
     background: #0779e4;
     color: #fff;
-    padding: 10px 20px;
+    padding: 10px;
     border: 0;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
 }
 
 form div button[type="submit"]:hover {
     background: #055ab7;
 }
 
-/* Results section styles */
-#results {
-    background: #fff;
+#pet-results, #walker-results {
+    margin: 20px 0;
     padding: 20px;
-    margin-bottom: 20px;
+    background: #fff;
     box-shadow: 0 0 10px 0 #ccc;
 }
 
-#results h2 {
+#pet-results h2, #walker-results h2 {
     margin-top: 0;
-    margin-bottom: 10px;
 }
 
-#results ul {
+#pets-list, #walkers-list {
     list-style: none;
     padding: 0;
 }
 
-#results ul li {
+#pets-list li, #walkers-list li {
     padding: 10px;
     border-bottom: 1px #ccc solid;
 }
