--- a/views/index.html
+++ b/views/index.html
@@ -43,18 +43,14 @@
             </form>
         </section>
 
-        <section id="pet-results">
+        <section>
             <h2>Registered Pets</h2>
-            <ul id="pets-list">
-                <!-- Pets will be displayed here -->
-            </ul>
+            <ul id="pets-list"></ul>
         </section>
 
-        <section id="walker-results">
+        <section>
             <h2>Registered Dog Walkers</h2>
-            <ul id="walkers-list">
-                <!-- Walkers will be displayed here -->
-            </ul>
+            <ul id="walkers-list"></ul>
         </section>
     </div>
 
